<resources>
    <string name="app_name">Notes</string>
    <string name="app_name_long">Privacy Friendly Notes</string>
    <string name="default_category">Default</string>
    <string name="default_color">Default</string>
    <string name="title_manage_categories">Categories</string>
    <string name="title_textnote">Text Note</string>
    <string name="title_checklistnote">Checklist Note</string>
    <string name="title_audionote">Audio Note</string>
    <string name="title_sketchnote">Sketch Note</string>
    <string name="title_recycle_bin">Recycle Bin</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_about">About</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_all">All notes</string>
    <string name="nav_trash">Recycle bin</string>
    <string name="nav_manage_categories">Manage categories</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About</string>
    <string name="nav_tutorial">Tutorial</string>
    <string name="action_sort_alphabetical">Sort alphabetical</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_reminder">Set reminder</string>
    <string name="action_reminder_edit">Edit reminder</string>
    <string name="action_reminder_delete">Delete reminder</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_deselect_all">Deselect all</string>
    <string name="action_select_all">Select all</string>
    <string name="action_new_checked">New checklist from checked</string>
    <string name="action_new_unchecked">New checklist from unchecked</string>
    <string name="action_save">Save</string>
    <string name="action_lock">Lock</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_update">Update</string>
    <string name="action_add">Add</string>
    <string name="action_share">Share</string>
    <string name="action_edit">Edit</string>
    <string name="action_bold">B</string>
    <string name="action_italics">I</string>
    <string name="action_underline"><u>U</u></string>
    <string name="action_export">Export</string>
    <string name="action_export_all">Export all notes</string>
    <string name="action_export_html">Export as HTML</string>
    <string name="action_export_png">Export as PNG</string>
    <string name="action_category">Category</string>
    <string name="action_sketch_undo">Undo</string>
    <string name="action_sketch_redo">Redo</string>
    <string name="action_convert_to_checklist">Convert to checklist</string>
    <string name="action_convert_to_text">Convert to text note</string>
    <string name="action_pin">Pin</string>
    <string name="action_unpin">Unpin</string>
    <string name="action_done">Mark as done</string>
    <string name="action_not_done">Mark as unfinished</string>
    <string name="action_delete_all_finished">Delete all done</string>
    <string name="action_mode_select_category">Select category</string>
    <string name="action_change_multiple_category">Change category</string>
    <string name="hint_name">Name</string>
    <string name="hint_note">Note</string>
    <string name="hint_new_item">New item</string>
    <string name="toast_canceled">Canceled without saving</string>
    <string name="toast_saved">Note saved</string>
    <string name="toast_updated">Note updated</string>
    <string name="toast_category_exists">Category already exists</string>
    <string name="toast_alarm_scheduled">Alarm scheduled for %1s</string>
    <string name="toast_need_permission_audio">Permission to use the microphone is needed for this feature</string>
    <string name="toast_need_permission_write_external">Permission to write to external storage is needed for this feature</string>
    <string name="toast_external_storage_not_mounted">Error: Cannot write to external storage</string>
    <string name="toast_file_exported_to">Exported note to %1s</string>
    <string name="toast_file_export_all_start">Export of all notes started</string>
    <string name="toast_emptyNote">Empty note cannot be saved</string>
    <string name="toast_checklist_oneItem">Only one item can be modified.</string>
    <string name="toast_open_file_too_large">The opened file is too large.</string>
    <string name="toast_open_file_too_many_characters">The file has too many characters. Only loading until limit reached.</string>
    <string name="toast_deleted">Note deleted</string>
    <string name="toast_deleted_multiple">Notes deleted</string>
    <string name="dialog_delete_title">Delete %1s?</string>
    <string name="dialog_delete_message">Are you sure you want to delete %1s?</string>
    <string name="dialog_delete_category_with_notes">Are you sure you want to delete %1s? All notes in the category <b>will be deleted!</b></string>
    <string name="dialog_delete_category_without_notes">Are you sure you want to delete %1s? <b>No</b> notes will be deleted.</string>
    <string name="dialog_delete_all_recycle_bin_title">Delete all Notes in recycle bin</string>
    <string name="dialog_delete_all_recycle_bin_message">Are you sure you want to delete all currently filtered Notes in the recycle bin?</string>
    <string name="dialog_trash_title">Moving to recycle bin</string>
    <string name="dialog_trash_message">Notes will be moved to the recycle bin. You can recover or permanently delete them there. Notifications cannot be restored.</string>
    <string name="dialog_save_title">Deleting selected items.</string>
    <string name="dialog_save_message">Checked items will be deleted on updating or saving the note.</string>
    <string name="dialog_restore_title">Restore or delete %1s?</string>
    <string name="dialog_restore_message">Do you want to restore or delete %1s?</string>
    <string name="dialog_need_category_title">No Categories</string>
    <string name="dialog_need_category_message">You need to create at least one category.\nDo you want to do that now?</string>
    <string name="dialog_welcome">Welcome</string>
    <string name="dialog_help">View Help</string>
    <string name="dialog_welcome_text">With this app you can create and share notes in the form of text, checklists, memos and sketches.</string>
    <string name="dialog_ok" translatable="false">OKAY</string>
    <string name="dialog_create_category_title">Create category</string>
    <string name="dialog_change_category_name_title">Change category name</string>
    <string name="dialog_create_category_btn">Create</string>
    <string name="category_fab_desc">Create category</string>
    <string name="dialog_need_permission_notifications_and_exact_alarm_title">Enable notifications</string>
    <string name="dialog_need_permission_notifications_and_exact_alarm_message">Permission to send notifications and schedule alarms and reminders is needed for this feature.</string>
    <string name="dialog_change_multiple_category_title">Select the category to be set</string>
    <string name="dialog_change_multiple_category_btn">Set</string>
    <string name="dialog_option_delete">Delete</string>
    <string name="dialog_option_restore">Restore</string>
    <string name="fab_text">New text</string>
    <string name="fab_audio">New audio</string>
    <string name="fab_checklist">New checklist</string>
    <string name="fab_sketch">New sketch</string>
    <string name="note_standardname">Note %d</string>
    <string name="tv_category">Category:</string>
    <string name="settings_general_heading">General</string>
    <string name="settings_del_notes_title">Delete notes in category</string>
    <string name="settings_del_notes_sum">Also delete notes that are in the category that is deleted.</string>
    <string name="settings_note_trashing_dialog_title">Confirmation before deleting note</string>
    <string name="settings_note_trashing_dialog_desc">Ask for confirmation before moving a note into the recycling bin.</string>
    <string name="settings_use_custom_font_size_title">Custom font size</string>
    <string name="settings_use_custom_font_size_sum">Use a custom font size in the text note editor.</string>
    <string name="settings_font_size_title">Font size</string>
    <string name="settings_font_size_sum">Click here to select the font size.</string>
    <string name="settings_color_category_title">Color notes by category</string>
    <string name="settings_color_category_summary">Use a custom color per category and display notes colored in their category.</string>
    <string name="help_overview_heading">Overview</string>
    <string name="help_intro">Welcome to the help page. This app lets you take and manage notes without compromising your privacy.</string>
    <string name="help_privacy_heading">Privacy Info</string>
    <string name="help_perm_receive_boot_title">RECEIVE BOOT COMPLETED</string>
    <string name="help_perm_receive_boot_sum">is needed to reschedule the notifications after a reboot.</string>
    <string name="help_perm_record_audio_title">RECORD AUDIO</string>
    <string name="help_perm_record_audio_sum">is needed to record audio notes; if this is not granted, audio notes are unavailable.</string>
    <string name="help_perm_write_external_title">WRITE EXTERNAL STORAGE</string>
    <string name="help_perm_write_external_sum">is needed to save notes to the internal memory; if this is not granted, notes cannot be saved externally.</string>
    <string name="about_version_number">Version</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Robin Morawetz, Maximilian Zimmermann,\n Patrick Schneider</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="about_privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruhe Institute of Technology (KIT). Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="about_more_info">More information can be found on:</string>
    <string name="about_url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="about_github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-notes">Github-Repo</a></string>
    <string name="note_item_title">Title</string>
    <string name="note_item_description">Description</string>
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">This app lets you create and manage notes.</string>
    <string name="slide2_heading">Key Elements</string>
    <string name="slide2_text">Currently it supports four types of notes: Text, Checklist, Audio, Sketch. </string>
    <string name="slide3_heading">Advantages</string>
    <string name="slide3_text">Most apps for note taking need a lot of permissions and synchronize over the internet. Consequently they use some company service, that you have to trust. While this is a convenient feature, it weakens your privacy.Privacy Friendly Apps are group of Android applications which are optimized regarding privacy.</string>
    <string name="okay">Okay</string>
    <string name="settings_appearance_heading">Appearance</string>
    <string name="settings_settings_show_preview_title">Show note previews</string>
    <string name="settings_settings_settings_show_preview_sum">Display a short preview of notes in the overview</string>
    <string name="select_day_night_theme">Design</string>
</resources>