<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_general_heading">
        <SwitchPreference
            android:key="settings_del_notes"
            android:defaultValue="false"
            android:title="@string/settings_del_notes_title"
            android:summary="@string/settings_del_notes_sum"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_appearance_heading">
        <ListPreference
            android:key="settings_day_night_theme"
            android:title="@string/select_day_night_theme"
            android:summary="%s"
            android:defaultValue="-1"
            android:entries="@array/array_day_night_theme"
            android:entryValues="@array/array_day_night_theme_values"
            />
        <SwitchPreference
            android:key="settings_use_custom_font_size"
            android:defaultValue="false"
            android:title="@string/settings_use_custom_font_size_title"
            android:summary="@string/settings_use_custom_font_size_sum" />
        <ListPreference
            android:key="settings_font_size"
            android:dependency="settings_use_custom_font_size"
            android:title="@string/settings_font_size_title"
            android:summary="@string/settings_font_size_sum"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_values" />
        <SwitchPreference
            android:key="settings_show_preview"
            android:defaultValue="true"
            android:title="@string/settings_settings_show_preview_title"
            android:summary="@string/settings_settings_settings_show_preview_sum" />
    </PreferenceCategory>
</PreferenceScreen>