<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reminder"
        android:orderInCategory="50"
        android:title="@string/action_reminder"
        android:icon="@drawable/ic_alarm_add_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_baseline_save_24"
        android:orderInCategory="50"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="100"
        android:title="@string/action_cancel"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.Button" />
    <item
        android:id="@+id/action_category"
        android:orderInCategory="100"
        android:title="@string/action_category"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/action_export"
        app:showAsAction="ifRoom" />
</menu>