<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reminder"
        android:orderInCategory="50"
        android:title="@string/action_reminder"
        android:icon="@drawable/ic_alarm_add_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_baseline_save_24"
        android:orderInCategory="50"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <group>
        <item
            android:id="@+id/action_cancel"
            android:orderInCategory="100"
            android:icon="@drawable/ic_baseline_close_24"
            android:title="@string/action_cancel"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="110"
            android:icon="@drawable/ic_delete_white_24dp"
            android:title="@string/action_delete"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_share"
            android:orderInCategory="120"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/action_share"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_export"
            android:orderInCategory="130"
            android:icon="@drawable/ic_import_export_black_24dp"
            android:title="@string/action_export"
            app:showAsAction="ifRoom" />
    </group>

</menu>